# i_edit_toml

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md
.github/workflows/: crate-publish-s.yml  crate-publish.yml  docker-debug.yml  docker-publish.yml  ghcr-clean-old.yml  ghcr-publish.yml  linux-release.yml  macos-release.yml  next-release.yml  platform-release.yml  window-release.yml
docs/: README.md  ai.designer.md  edit-test.md  how-to-use.md  publish-crate.md  发布管理-手动触发.md  发布管理.md  托管管理-gh.md  版本管理.md  镜像管理.md
scripts/: README.md  alpine-setup.sh  build-release.sh  crate-publish-pre.sh  docker-build.sh
src/: error.rs  extract.rs  extract_preset.rs  lib.rs  main.rs  types.rs  utils.rs
src/get/: core.rs  mod.rs  types.rs  utils.rs  xcli.rs
src/set/: core.rs  mod.rs  types.rs  utils.rs  xcli.rs
src/types/: get_config.rs  mod.rs  set_config.rs
src/utils/: mod.rs  path_parser.rs  value_parser.rs
