[package]
name = "toml_path"
version = "0.2.0"
edition = "2021"
description = "A lightweight, high-performance tool for Editing TOML based on field paths"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YeMiancheng/toml_path"
readme = "README.md"
keywords = ["toml_path", "edit","cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]
documentation = "https://docs.rs/toml_path"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
thiserror = "1.0"
serde-value = "0.7"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "toml_path"
path = "src/main.rs"

[lib]
name = "toml_path"
path = "src/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]