[package]
name = "i_edit_toml"
version = "0.2.0"
edition = "2021"
description = "A lightweight, high-performance tool for Editing TOML based on field paths"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/i_edit_toml"
readme = "README.md"
keywords = ["i_edit_toml", "edit","cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]
documentation = "https://docs.rs/i_edit_toml"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
thiserror = "1.0"
serde-value = "0.7"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "i_edit_toml"
path = "src/main.rs"

[lib]
name = "i_edit_toml"
path = "src/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]